Doc. Swagger complétée
