# routes/api.php
@@ -20,10 +20,10 @@ Route::group(['middleware' => 'throttle:5,1'], function () {
 Route::group(['middleware' => ['throttle:60,1', 'auth:sanctum']], function () {
     Route::post('/films', 'App\Http\Controllers\FilmController@store')->middleware('role:admin');
     Route::put('/films/{id}', 'App\Http\Controllers\FilmController@update')->middleware('role:admin');
-    Route::delete('/films/{id}', 'App\Http\Controllers\FilmController@destroy')->middleware('role:admin')->middleware('check_is_film_deletable');
+    Route::delete('/films/{id}', 'App\Http\Controllers\FilmController@destroy')->middleware('role:admin')->middleware('check.film.has.relation');
 
-    Route::post('/films/{film_id}/critics', 'App\Http\Controllers\CriticController@store')->middleware('critic_limit');
+    Route::post('/films/{film_id}/critics', 'App\Http\Controllers\CriticController@store')->middleware('check.critic.limit');
 
-    Route::get('/users/{id}', 'App\Http\Controllers\AuthController@show')->middleware('check_user_ownership');
-    Route::patch('/users/{id}/password', 'App\Http\Controllers\AuthController@updatePassword')->middleware('check_user_ownership');//->middleware('confirm_password_match');
+    Route::get('/users/{id}', 'App\Http\Controllers\AuthController@show')->middleware('check.user.ownership');
+    Route::patch('/users/{id}/password', 'App\Http\Controllers\AuthController@updatePassword')->middleware('check.user.ownership');
 });
